<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/tanggal"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:fontFamily="@font/acme"
                android:textSize="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tvTanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/app_name"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <TextView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/harga"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:fontFamily="@font/acme"
                android:textSize="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tvHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/app_name"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <TextView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/produk"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:fontFamily="@font/acme"
                android:textSize="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tvProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/app_name"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <TextView
                android:layout_width="@dimen/_55sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/jumlah_liter"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:fontFamily="@font/acme"
                android:textSize="@dimen/_10sdp"/>

            <TextView
                android:id="@+id/tvLiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/app_name"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                />

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>