<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_view"
    tools:context=".MainActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_home" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:paddingBottom="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_20sdp">

                <RelativeLayout
                    android:id="@+id/parent_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:visibility="gone"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="@dimen/_10sdp"
                    >

                    <TextView
                        android:id="@+id/text_minim_stok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="@dimen/_12sdp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/acme"/>
                    <ImageView
                        android:id="@+id/ic_close"
                        android:padding="@dimen/_4sdp"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_close"
                        android:layout_alignParentEnd="true"
                        app:tint="@color/abu_tua" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:padding="@dimen/_15sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/_5sdp"
                            android:layout_margin="@dimen/_10sdp"
                            android:paddingStart="@dimen/_15sdp"
                            >
                            <TextView
                                android:id="@+id/text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/produk"
                                android:layout_centerVertical="true"
                                android:textStyle="bold"
                                android:textSize="@dimen/_15sdp"/>


                            <androidx.cardview.widget.CardView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:cardCornerRadius="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_15sdp"
                                android:layout_marginEnd="@dimen/_10sdp"
                                android:layout_marginBottom="@dimen/_5sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:padding="@dimen/_10sdp"
                                android:layout_toEndOf="@+id/text"
                                android:orientation="vertical">
                                <Spinner
                                    android:id="@+id/spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/_10sdp"
                                    android:layout_toEndOf="@+id/text"
                                    android:drawableEnd="@drawable/ic_drop_down" />

                            </androidx.cardview.widget.CardView>
                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/_15sdp"
                            android:paddingStart="@dimen/_15sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:orientation="horizontal"
                            android:weightSum="6"
                            >
                            <TextView
                                android:id="@+id/text1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/harga"
                                android:layout_weight="0.5"
                                android:textStyle="bold"
                                android:textSize="@dimen/_10sdp"/>


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_1"
                                android:layout_weight="0.1"
                                android:fontFamily="@font/acme"
                                android:textSize="@dimen/_10sdp"/>

                            <TextView
                                android:id="@+id/tvCost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/acme"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp"
                                android:enabled="false"
                                />

                            <TextView
                                android:id="@+id/text2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/stock"
                                android:layout_weight="0.5"
                                android:textStyle="bold"
                                android:textSize="@dimen/_10sdp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_1"
                                android:layout_weight="0.1"
                                android:fontFamily="@font/acme"
                                android:textSize="@dimen/_10sdp"/>

                            <TextView
                                android:id="@+id/tvAmountLiter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:fontFamily="@font/acme"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_10sdp"
                                android:enabled="false"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/_15sdp"
                            android:paddingStart="@dimen/_15sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            >
                            <TextView
                                android:id="@+id/text3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pembelian"
                                android:textStyle="bold"
                                android:textSize="@dimen/_15sdp"/>

                            <EditText
                                android:id="@+id/tvBuy"
                                android:hint="@string/_0"
                                android:maxLength="11"
                                android:maxLines="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/acme"
                                android:textSize="@dimen/_20sdp"
                                android:enabled="false"
                                android:inputType="numberDecimal" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:id="@+id/number"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:nestedScrollingEnabled="false"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>